# robottesting

./: .gitignore  ARCHITECTURE.md  README.md  log.html  output.xml  pyproject.toml  report.html  robot.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
resources/api/keywords/: api_validation_keywords.resource
resources/api/payload/: addObject_2.json
resources/api/schemas/: object.schema.json
resources/browser/keywords/: product_page_keywords.resource
resources/browser/variables/: common_elements.resource
resources/keywords/: login_keywords.resource  product_keywords.resource
resources/mobile/: calculator_capabilities.resource  capabilities.resource  reminder_capabilities.resource  safari_capabilities.resource
resources/mobile/keywords/: calculator_keywords.resource  common_keywords.resource  reminder_keywords.resource  safari_keywords.resource
resources/mobile/variables/: common_elements.resource  common_variables.resource  mobile_safari_elements.resource  reminders_elements.resource
resources/payload/: addObject_2_patch.json  addObject_2_update.json
resources/ui/keywords/: login_page_keywords.resource  product_page_keywords.resource  (+1 more)
resources/variables/: common_variables.resource
results/: log.html  output.xml  playwright-log.txt  report.html
tests/api_tests/: test_api.robot
tests/browser_tests/: __init__.robot  login_test.robot  product_test.robot
tests/mobile_tests/: __init__.robot  calculator_app_test.robot  reminder_app_test.robot  start_test.robot
tests/ui_tests/: login_test.robot  product_test.robot
(+1 files in other folders)
