[project]
name = "robottesting"
version = "0.1.0"
description = ""
authors = [
    {name = "Elias Grinberg", email = "illya.grinberg@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "robotcode>=1.9.0",
    "robotframework>=7.3.2",
    "robotframework-browser>=19.7.2",
    "robotframework-jsonlibrary>=0.5",
    "robotframework-requests>=0.9.7",
    "robotframework-appiumlibrary>=3.1",
    "robotcode-runner (>=1.9.0,<2.0.0)",
    "robotframework-autorecorder (>=0.1.6,<0.2.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
